Update Css to fix overlaps / text oversize problems

--- a/src/antiX-boot.css
+++ b/src/antiX-boot.css
@@ -1,7 +1,7 @@
 
 body {
     background-color:                    #e0e0e0;
-    font-size:                              125%;
+    font-size:                              16px;
     margin:                                  0px;
     font-family:      
        'DejaVu Sans', Arial,Helvetica,sans-serif;
@@ -58,8 +58,9 @@ h1 {
 h2 {
     margin-top:                              1em;
     margin-bottom:                           0em;
+    margin-left: 2%;
     font-size:                             1.4em;
-    width:                                  25em;
+    width:                                   95%;
     border-bottom:              2px solid silver;
     border-top:                 2px solid silver;
     background:                          #e0e0ff;
@@ -107,22 +108,30 @@ h5 {
 div#left-col {
     position:                              fixed;
     top:                                     0px;
+    width:                                 200px;
+    height:                                 100%;
+    background-color:                          #a0b0d0;
 }
 
 div#antix-logo {
     position:                              fixed;
     top:                                     0px;
     left:                                    0px;
-    width:                                 138px;
-    height:                                111px;
-    background-color:                    #98777B		;
+    width:                                 200px;
+    height:								   111px;
+    background-color:                    #98777B;
+    text-align: center;
+}
+div#antix-logo img {
+    height:								   111px;
 }
 
 div#banner-text {
+    position: fixed;
     top:                                     0px;
     width:                                  100%;
     height:                                111px;
-    background-color:                    #98777B		;
+    background-color:                    #98777B;		;
     color:                               #a2cbff;
     text-align:                             left;
     font-family:
@@ -142,7 +151,8 @@ div#banner-text {
 }
 
 div#right-col {
-    padding-left:                          138px;
+    margin-top: 120px;
+    padding-left:                          200px;
 }
 
 div#body-text {
@@ -154,15 +164,17 @@ div#body-text {
 /* ----- Menu on Left-Hand Side -------------- */
 
 div#main-menu {
-    position:                              fixed;
+    position: fixed !important;
+    z-index: 1;
+    overflow: auto;
     left:                                    0px;
     top:                                   111px;
-    width:                                 128px;
+    width: 200px;
+    height: 100%;
 }
 
 table#menu-table {
     border-collapse:                    collapse;
-    background:                          #a0b0d0;
 }
 
 #menu-table tr {
@@ -177,7 +189,7 @@ table#menu-table {
     font-weight:                          normal;
     color:                                  grey;
     text-align:                            right;
-    width:                                 138px;
+    width:                                 180px;
     font-family:
               'DejaVu Sans',Helvetica,sans-serif;
 }
